# agent-os-miniature

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  DashboardView.tsx  FRONTEND_OVERHAUL_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_100.md  IMPLEMENTATION_PLAN_GITHUB_REVIEW_v2.md  IMPLEMENTATION_PLAN_POC_v3.md  IMPLEMENTATION_PLAN_v1.md  PLAN_code_quality_hardening.md  PLAN_custom_input_modes.md  PROJECT_REPORT.md  README.md  _patch_phase1.py  config.yaml.example  main.py  pyproject.toml  requirements.txt  requirements.yaml  requirements2.yaml  requirements3.yaml  requirements4.yaml  requirements5.yaml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-13T12-31-24-208Z.yml
agent_os/: __init__.py  __main__.py  constants.py  logging_config.py  protocols.py
agent_os/agents/: __init__.py  brain.py  context.py  registry.json  store.py
agent_os/api/: __init__.py  app.py  deps.py  exceptions.py  middleware.py  schemas.py  websocket.py
agent_os/code_generator/: __init__.py  completion.py  file_ops.py  git_strategies.py  guardrails.py  runner.py
agent_os/code_reviewer/: __init__.py  commenter.py  diff_fetcher.py  llm_client.py  runner.py  schema.py
agent_os/codex/: __init__.py  api_adapter.py  cli_adapter.py  executors.py  session.py  streaming.py  wrapper.py
agent_os/comms/: bus.py  channels.py  messages.py
agent_os/config/: __init__.py  env.py  loader.py  schema.py
agent_os/git_ops/: __init__.py  manager.py
agent_os/github/: __init__.py  client.py
agent_os/github_input/: __init__.py  cloner.py
agent_os/hardening/: __init__.py  dependency_mgr.py  error_handler.py  json_repair.py  retry.py  rollback.py  token_budget.py
agent_os/module_maker/: dependency_graph.py  runner.py  schema.py
agent_os/orchestrator/: __init__.py  ado_manager.py  cli.py  context.py  decision.py  emitter.py  engine.py  events.py  handlers.py  pipeline_runner.py  provisioner.py  state.py  story_queue.py  story_runner.py
agent_os/prompt_generator/: __init__.py  frameworks.py  runner.py  schema.py
agent_os/requirements/: __init__.py  parser.py  schema.py  validator.py
agent_os/services/: __init__.py  auth_service.py  pipeline_service.py  project_namer.py  (+2 more)
frontend/: package-lock.json  package.json
project-root/: .gitignore  README.md  api.py  app.py  ci_check.py  db.py  models.py  requirements.txt
prompts/: latest.md
tests/: conftest.py  test_custom_input_modes.py  test_github_review_pipeline.py  test_phase12_iteration_loop.py  test_phase13_git_sequencing.py  test_phase14_api.py  test_phase15_hardening.py  test_phase16_settings.py  test_phase17_github.py  test_phase5_github_input.py  test_story_queue.py
(+136 files in other folders)
