[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os"
version = "0.1.0"
description = "Autonomous SDLC Engine — module-by-module code generation and review pipeline"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "httpx>=0.27",
]
validation = [
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pytest>=8.0",
]

[project.scripts]
agent-os = "agent_os.orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_os*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
