[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os"
version = "0.1.0"
description = "Autonomous SDLC Engine — module-by-module code generation and review pipeline"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
]
validation = [
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pytest>=8.0",
]

[project.scripts]
agent-os = "agent_os.orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_os*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that require a live database or HTTP server",
    "characterization: marks tests that characterize existing behavior",
]

[tool.coverage.run]
source = ["agent_os"]
omit = ["agent_os/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 38

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_os"]
